package com.divya.systemdesign.creational.abstractfactory_CrossPlatformUI;

public interface Button {
    void render();
}
