package com.divya.systemdesign.creational.abstractfactory_CrossPlatformUI;

public interface Checkbox {
    void render();
}
