package com.divya.systemdesign.creational.abstractfactory_CrossPlatformUI;

public interface GUIFactory {
    Button createButton();
    Checkbox createCheckbox();
    TextField createTextField();

}
