package com.divya.systemdesign.creational.abstractfactory_CrossPlatformUI;

public class LinuxFactory implements GUIFactory {
    @Override
    public Button createButton() {
        return new LinuxButton();
    }
    @Override
    public Checkbox createCheckbox() {
        return new LinuxCheckbox();
    }
    @Override
    public TextField createTextField() {
        return new LinuxTextField();
    }
}
