package com.divya.systemdesign.creational.abstractfactory_CrossPlatformUI;

public class MacCheckbox implements Checkbox {
    @Override
    public void render() {
        System.out.println("Rendering Mac Checkbox");
    }

}
