package com.divya.systemdesign.creational.abstractfactory_CrossPlatformUI;

public class MacTextField implements TextField {
    @Override
    public void render() {
        System.out.println("Rendering Mac TextField");
    }

}
