package com.divya.systemdesign.creational.abstractfactory_CrossPlatformUI;

public interface TextField {
    void render();
}
