package com.divya.systemdesign.creational.abstractfactory_CrossPlatformUI;

public class WindowsCheckbox implements Checkbox {
    @Override
    public void render() {
        System.out.println("Rendering Windows Checkbox");
    }

}
