package com.divya.systemdesign.creational.abstractfactory_CrossPlatformUI;

public class WindowsFactory implements GUIFactory{
    @Override
    public Button createButton() {
        return new WindowsButton();
    }
    @Override
    public Checkbox createCheckbox() {
        return new WindowsCheckbox();
    }
    @Override
    public TextField createTextField() {
        return new WindowsTextField();
    }
}
